second background finished

--- a/index.html
+++ b/index.html
@@ -73,33 +73,35 @@
         <img class="gallery-image" src="/assets/galeria-8.png" />
       </article>
     </main>
-    <section class="secondary-background">
+    <section class="second-background">
       <div class="lateral-column">
-        <div>
-          <h3 class="lateral-column-num">10K+</h3>
-          <p class="lateral-column-text">Artes</p>
-        </div>
-        <div>
-          <h3 class="lateral-column-num">200+</h3>
-          <p class="lateral-column-text">Vendas</p>
-        </div>
-        <div>
-          <h3 class="lateral-column-num">20</h3>
-          <p class="lateral-column-text">Artistas</p>
+        <div class="lateral-column-container">
+          <div>
+            <h3 class="lateral-column-num">10K+</h3>
+            <p class="lateral-column-text">Artes</p>
+          </div>
+          <div>
+            <h3 class="lateral-column-num">200+</h3>
+            <p class="lateral-column-text">Vendas</p>
+          </div>
+          <div>
+            <h3 class="lateral-column-num">20</h3>
+            <p class="lateral-column-text">Artistas</p>
+          </div>
         </div>
       </div>
         <div class="testimonials-1">
           <p class="testimonials-text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
-          culpa doloribus similique nisi eum voluptatum minima porro repudiandae
-          dolorem blanditiis asperiores minus tempore
-          </p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
+            culpa doloribus <span class="colored-underline">similique nisi eum</span> voluptatum minima porro repudiandae
+            dolorem blanditiis asperiores minus tempore
+            </p>
           <p class="testimonials-author">Lorem ipsum</p>
         </div>
         <div class="testimonials-2">
           <p class="testimonials-text">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
-            culpa doloribus similique nisi eum voluptatum minima porro repudiandae
+            culpa doloribus <span class="colored-underline">similique nisi eum</span> voluptatum minima porro repudiandae
             dolorem blanditiis asperiores minus tempore
             </p>
           <p class="testimonials-author">Lorem ipsum</p>
@@ -111,7 +113,10 @@
     </section>
     <section class="third-background">
       <div class="populares-da-semana">
-        <p>PENDENTE</p>
+        <h2><span class="colored-text">Populares</span> da semana</h2>
+        <div>
+
+        </div>
       </div>
       <div class="melhores-artistas">
         <h2>Melhores <span class="colored-text">artistas</span></h2>
