populares da semana finished

--- a/index.html
+++ b/index.html
@@ -114,8 +114,62 @@
     <section class="third-background">
       <div class="populares-da-semana">
         <h2><span class="colored-text">Populares</span> da semana</h2>
-        <div>
+        <div class="populares-grid">
+          <div class="astronaut-container">
+            <div class="astronaut-first-line">
+              <h3>Astronauta 1</h3>
+              <img class="arrow" src="/assets/arrow-white.svg">
+            </div>
+            <div class="astronaut-second-line">
+              <h3>Mayk Brito</h3>
+              <p>1.50 RKT</p>
+            </div>
+            <div class="astronaut-third-line">
+              <img src="/assets/astronauta 1.png"/>
+            </div>
+          </div>
 
+          <div class="astronaut-container astronaut-end">
+            <div class="astronaut-first-line">
+              <h3>Astronauta 2</h3>
+              <img class="arrow" src="/assets/arrow-white.svg">
+            </div>
+            <div class="astronaut-second-line">
+              <h3>Jakeliny Gracielly</h3>
+              <p>2.0 RKT</p>
+            </div>
+            <div class="astronaut-third-line">
+              <img src="/assets/astronauta-2.png"/>
+            </div>
+          </div>
+
+          <div class="astronaut-container">
+            <div class="astronaut-first-line">
+              <h3>Astronauta 3</h3>
+              <img class="arrow" src="/assets/arrow-white.svg">
+            </div>
+            <div class="astronaut-second-line">
+              <h3>João Inácio (Biro)</h3>
+              <p>3.75 RKT</p>
+            </div>
+            <div class="astronaut-third-line">
+              <img src="/assets/astronauta-3.png"/>
+            </div>
+          </div>
+
+          <div class="astronaut-container astronaut-end">
+            <div class="astronaut-first-line">
+              <h3>Astronauta 4</h3>
+              <img class="arrow" src="/assets/arrow-white.svg">
+            </div>
+            <div class="astronaut-second-line">
+              <h3>Tamires Santos</h3>
+              <p>4.30 RKT</p>
+            </div>
+            <div class="astronaut-third-line">
+              <img src="/assets/astronauta-4.png"/>
+            </div>
+          </div>
         </div>
       </div>
       <div class="melhores-artistas">
