melhores artistas finished

--- a/index.html
+++ b/index.html
@@ -182,17 +182,17 @@
             </div>
             <div class="artist-text">
               <p>Mayk Brito</p>
-              <p class="colored-text">80 Fotografias</p>
+              <span class="colored-text">80 Fotografias</span>
             </div>
           </div>
 
-          <div class="artist-container container-color">
+          <div class="artist-container">
             <div class="artist-image">
               <img src="/assets/artista-2.png"/>
             </div>
             <div class="artist-text">
               <p>Jakeliny G.</p>
-              <p>99 Fotografias</p>
+              <span class="colored-text">99 Fotografias</span>
             </div>
           </div>
 
@@ -202,7 +202,7 @@
             </div>
             <div class="artist-text">
               <p>João I. (Biro)</p>
-              <p class="colored-text">50 Fotografias</p>
+              <span class="colored-text">50 Fotografias</span>
             </div>
           </div>
 
@@ -212,7 +212,7 @@
             </div>
             <div class="artist-text">
               <p>Tamires Santos</p>
-              <p class="colored-text">43 Fotografias</p>
+              <span class="colored-text">43 Fotografias</span>
             </div>
           </div>
 
@@ -222,7 +222,7 @@
             </div>
             <div class="artist-text">
               <p>Ana Silva</p>
-              <p class="colored-text">28 Fotografias</p>
+              <span class="colored-text">28 Fotografias</span>
             </div>
           </div>
 
@@ -232,12 +232,13 @@
             </div>
             <div class="artist-text">
               <p>Diego F.</p>
-              <p class="colored-text">20 Fotografias</p>
+              <span class="colored-text">20 Fotografias</span>
             </div>
           </div>
         </div>
-
-        <p class="ver-todos-os-artistas">Ver todos os artistas</p>
+        <div class="ver-todos-os-artistas">
+          <a>Ver todos os Artistas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="/assets/arrow-orange.svg" /></a>
+        </div>
       </div>
     </section> 
     <footer>
