--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Rocketseat landing page challenge">
 
+    <link rel="icon" href="/assets/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,13 +16,13 @@
 
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Rocket NFTs</title>
+    <title>Rocket NFTs &mdash; Descubra a verdadeira arte digital</title>
   </head>
   <body>
     <main class="main-background">
       <header class="navigation">
         <div class="navigation-logo">
-          <a href="#"><p>Rocket <span class="colored-text">NFTs</span></p></a>
+          <a href="#"><p>Rocket <span class="colored-text bold">NFTs</span></p></a>
         </div>
         <div>
           <ul class="navigation-links">
@@ -48,14 +50,14 @@
               <img alt="Artist photo" src="/assets/artista-2.png" />
               <img alt="Artist photo" src="/assets/artista-3.png" />
               <img alt="Artist photo" src="/assets/artista-4.png" />
-              <p><strong>+10</strong><br>Artistas relacionados</p>
+              <p><span class="bold">+10</span><br>Artistas relacionados</p>
             </div>
           </div>
         </div>
         <div class="heading">
           <h1 class="heading-text">
             Descubra a verdadeira arte digital e<br> colecione diversas
-            <span class="colored-text">NFTs</span>
+            <span class="colored-text bold">NFTs</span>
           </h1>
         </div>
         <div>
@@ -173,7 +175,7 @@
         </div>
       </div>
       <div class="melhores-artistas">
-        <h2>Melhores <span class="colored-text">artistas</span></h2>
+        <h2>Melhores <span class="colored-text bold">artistas</span></h2>
       
         <div class="artists-grid">
           <div class="artist-container">
@@ -241,8 +243,60 @@
         </div>
       </div>
     </section> 
-    <footer>
-      <p>PENDENTE</p>
+    <footer class="footer-first">
+      <div class="footer-first-line">
+        <div class="navigation-logo">
+          <a href="#"><p>Rocket <span class="colored-text bold">NFTs</span></p></a>
+        </div>
+        <a href="#" class="home-button"><img src="/assets/arrow-black.svg"/></a>
+      </div>
+    </footer>
+    <footer class="footer-second">
+      <div class="footer-newsletter">
+        <div class="footer-newsletter-box">
+          <p>Fique por dentro de<br><span class="colored-text">todas as novidades</span></p>
+          <form>
+            <input type="email" placeholder="nft@rocketseat.com.br">
+            <input type="submit" value="Enviar">
+          </form> 
+        </div>
+      </div>
+      <div class="footer-map">
+        <div class="footer-column">
+          <a href="#">Empresa</a>
+          <a href="#">Sobre</a>
+          <a href="#">Serviços</a>
+          <a href="#">Time</a>
+          <a href="#">Carreira</a>
+        </div>
+        <div class="footer-column">
+          <a href="#">Mapa</a>
+          <a href="#">Galeria</a>
+          <a href="#">Populares</a>
+          <a href="#">Vendas</a>
+          <a href="#">Contato</a>
+        </div>
+        <div class="footer-column">
+          <a href="#">Links</a>
+          <a href="#">FAQs</a>
+          <a href="#">Termos</a>
+          <a href="#">Política</a>
+          <a href="#">Ajuda</a>
+        </div>
+      </div>
+    </footer>
+    <footer class="footer-last">
+      <div class="footer-last-line">
+        <div>
+          <a href="#">www.rocketseat.com.br</a>
+        </div>
+        <div class="social-media-container">
+          <a href="#"><img class="social-media" src="/assets/instagram.svg"/></a>
+          <a href="#"><img class="social-media" src="/assets/youtube.svg"/></a>
+          <a href="#"><img class="social-media" src="/assets/twitter.svg"/></a>
+          <a href="#"><img class="social-media" src="/assets/email.svg"/></a>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
