referencing alt attribute on images and fixing small issues

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <meta name="description" content="Rocketseat landing page challenge">
 
     <link rel="icon" href="/assets/favicon.ico">
@@ -27,13 +28,13 @@
         <div>
           <ul class="navigation-links">
             <li><a class="navigation-link" href="#">Comprar NFT</a></li>
-            <li><a class="navigation-link href="#">Sobre</a></li>
-            <li><a class="navigation-link href="#">FAQ</a></li>
+            <li><a class="navigation-link" href="#">Sobre</a></li>
+            <li><a class="navigation-link" href="#">FAQ</a></li>
           </ul>
         </div>
         <div>
           <button class="navigation-btn">
-            <img class="metamask-icon" src="/assets/logo_MetaMask.svg"/>
+            <img class="metamask-icon" alt="Fox logo" src="/assets/logo_MetaMask.svg"/>
             <span>Conectar carteira</span>
           </button>
         </div>
@@ -46,10 +47,10 @@
           <p class="description-text"></p>
           <div class="selected-artists">
             <div class="selected-artists-faces">
-              <img alt="Artist photo" src="/assets/artista-1.png" />
-              <img alt="Artist photo" src="/assets/artista-2.png" />
-              <img alt="Artist photo" src="/assets/artista-3.png" />
-              <img alt="Artist photo" src="/assets/artista-4.png" />
+              <img alt="Artist profile picture" src="/assets/artista-1.png" />
+              <img alt="Artist profile picture" src="/assets/artista-2.png" />
+              <img alt="Artist profile picture" src="/assets/artista-3.png" />
+              <img alt="Artist profile picture" src="/assets/artista-4.png" />
               <p><span class="bold">+10</span><br>Artistas relacionados</p>
             </div>
           </div>
@@ -61,18 +62,18 @@
           </h1>
         </div>
         <div>
-          <img src="/assets/badge.svg"/>
+          <img alt="Badge with message written on border" src="/assets/badge.svg"/>
         </div>
       </section>
       <article class="gallery-section">
-        <img class="gallery-image" src="/assets/galeria-1.png" />
-        <img class="gallery-image" src="/assets/galeria-2.png" />
-        <img class="gallery-image" src="/assets/galeria-3.png" />
-        <img class="gallery-image" src="/assets/galeria-4.png" />
-        <img class="gallery-image" src="/assets/galeria-5.png" />
-        <img class="gallery-image" src="/assets/galeria-6.png" />
-        <img class="gallery-image" src="/assets/galeria-7.png" />
-        <img class="gallery-image" src="/assets/galeria-8.png" />
+        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-1.png" />
+        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-2.png" />
+        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-3.png" />
+        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-4.png" />
+        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-5.png" />
+        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-6.png" />
+        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-7.png" />
+        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-8.png" />
       </article>
     </main>
     <section class="second-background">
@@ -110,7 +111,7 @@
         </div>
 
       <div class="banner">
-        <img src="assets/banner.png"/>
+        <img alt="Man with glasses and neon background" src="assets/banner.png"/>
       </div>
     </section>
     <section class="third-background">
@@ -127,7 +128,7 @@
               <p>1.50 RKT</p>
             </div>
             <div class="astronaut-third-line">
-              <img src="/assets/astronauta 1.png"/>
+              <img alt="Astronaut photography" src="/assets/astronauta 1.png"/>
             </div>
           </div>
 
@@ -141,7 +142,7 @@
               <p>2.0 RKT</p>
             </div>
             <div class="astronaut-third-line">
-              <img src="/assets/astronauta-2.png"/>
+              <img alt="Astronaut photography" src="/assets/astronauta-2.png"/>
             </div>
           </div>
 
@@ -155,7 +156,7 @@
               <p>3.75 RKT</p>
             </div>
             <div class="astronaut-third-line">
-              <img src="/assets/astronauta-3.png"/>
+              <img alt="Astronaut photography" src="/assets/astronauta-3.png"/>
             </div>
           </div>
 
@@ -169,7 +170,7 @@
               <p>4.30 RKT</p>
             </div>
             <div class="astronaut-third-line">
-              <img src="/assets/astronauta-4.png"/>
+              <img alt="Astronaut photography" src="/assets/astronauta-4.png"/>
             </div>
           </div>
         </div>
@@ -180,7 +181,7 @@
         <div class="artists-grid">
           <div class="artist-container">
             <div class="artist-image">
-              <img src="/assets/artista-1.png"/>
+              <img alt="Artist profile picture" src="/assets/artista-1.png"/>
             </div>
             <div class="artist-text">
               <p>Mayk Brito</p>
@@ -190,7 +191,7 @@
 
           <div class="artist-container">
             <div class="artist-image">
-              <img src="/assets/artista-2.png"/>
+              <img alt="Artist profile picture" src="/assets/artista-2.png"/>
             </div>
             <div class="artist-text">
               <p>Jakeliny G.</p>
@@ -200,7 +201,7 @@
 
           <div class="artist-container">
             <div class="artist-image">
-              <img src="/assets/artista-3.png"/>
+              <img alt="Artist profile picture" src="/assets/artista-3.png"/>
             </div>
             <div class="artist-text">
               <p>João I. (Biro)</p>
@@ -210,7 +211,7 @@
 
           <div class="artist-container">
             <div class="artist-image">
-              <img src="/assets/artista-4.png"/>
+              <img alt="Artist profile picture" src="/assets/artista-4.png"/>
             </div>
             <div class="artist-text">
               <p>Tamires Santos</p>
@@ -220,7 +221,7 @@
 
           <div class="artist-container">
             <div class="artist-image">
-              <img src="/assets/artista-5.png"/>
+              <img alt="Artist profile picture" src="/assets/artista-5.png"/>
             </div>
             <div class="artist-text">
               <p>Ana Silva</p>
@@ -230,7 +231,7 @@
 
           <div class="artist-container">
             <div class="artist-image">
-              <img src="/assets/artista-6.png"/>
+              <img alt="Artist profile picture" src="/assets/artista-6.png"/>
             </div>
             <div class="artist-text">
               <p>Diego F.</p>
@@ -239,7 +240,7 @@
           </div>
         </div>
         <div class="ver-todos-os-artistas">
-          <a>Ver todos os Artistas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="/assets/arrow-orange.svg" /></a>
+          <a href="#">Ver todos os Artistas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="/assets/arrow-orange.svg" /></a>
         </div>
       </div>
     </section> 
@@ -288,13 +289,13 @@
     <footer class="footer-last">
       <div class="footer-last-line">
         <div>
-          <a href="#">www.rocketseat.com.br</a>
+          <a href="https://www.rocketseat.com.br/" target="_blank">www.rocketseat.com.br</a>
         </div>
         <div class="social-media-container">
-          <a href="#"><img class="social-media" src="/assets/instagram.svg"/></a>
-          <a href="#"><img class="social-media" src="/assets/youtube.svg"/></a>
-          <a href="#"><img class="social-media" src="/assets/twitter.svg"/></a>
-          <a href="#"><img class="social-media" src="/assets/email.svg"/></a>
+          <a href="https://www.instagram.com/rocketseat_oficial/" target="_blank"><img alt="Instagram icon" class="social-media" src="/assets/instagram.svg"/></a>
+          <a href="https://www.youtube.com/c/RocketSeat" target="_blank"><img alt="Youtube icon" class="social-media" src="/assets/youtube.svg"/></a>
+          <a href="https://twitter.com/rocketseat" target="_blank"><img alt="Twitter icon" class="social-media" src="/assets/twitter.svg"/></a>
+          <a href="mailto:opensource@rocketseat.com.br" target="_blank"><img alt="Email icon" class="social-media" src="/assets/email.svg"/></a>
         </div>
       </div>
     </footer>
