smooth scrolling functionality

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta name="description" content="Rocketseat landing page challenge">
+    <meta name="description" content="Rocketseat landing page challenge" />
 
-    <link rel="icon" href="/assets/favicon.ico">
+    <link rel="icon" href="/assets/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,6 +16,7 @@
     />
 
     <link rel="stylesheet" href="styles.css" />
+    <script defer src="script.js"></script>
 
     <title>Rocket NFTs &mdash; Descubra a verdadeira arte digital</title>
   </head>
@@ -23,7 +24,9 @@
     <main class="main-background">
       <header class="navigation">
         <div class="navigation-logo">
-          <a href="#"><p>Rocket <span class="colored-text bold">NFTs</span></p></a>
+          <a class="home" href="#"
+            ><p>Rocket <span class="colored-text bold">NFTs</span></p></a
+          >
         </div>
         <div>
           <ul class="navigation-links">
@@ -34,7 +37,11 @@
         </div>
         <div>
           <button class="navigation-btn">
-            <img class="metamask-icon" alt="Fox logo" src="/assets/logo_MetaMask.svg"/>
+            <img
+              class="metamask-icon"
+              alt="Fox logo"
+              src="/assets/logo_MetaMask.svg"
+            />
             <span>Conectar carteira</span>
           </button>
         </div>
@@ -42,7 +49,9 @@
       <section class="main">
         <div class="description">
           <p class="description-text">
-            Mercado digital para colecionáveis em criptos e tokens não fungível (NFT).<br>Compre, venda e descubra ativos digitais exclusivos para você.
+            Mercado digital para colecionáveis em criptos e tokens não fungível
+            (NFT).<br />Compre, venda e descubra ativos digitais exclusivos para
+            você.
           </p>
           <p class="description-text"></p>
           <div class="selected-artists">
@@ -51,29 +60,65 @@
               <img alt="Artist profile picture" src="/assets/artista-2.png" />
               <img alt="Artist profile picture" src="/assets/artista-3.png" />
               <img alt="Artist profile picture" src="/assets/artista-4.png" />
-              <p><span class="bold">+10</span><br>Artistas relacionados</p>
+              <p><span class="bold">+10</span><br />Artistas relacionados</p>
             </div>
           </div>
         </div>
         <div class="heading">
           <h1 class="heading-text">
-            Descubra a verdadeira arte digital e<br> colecione diversas
+            Descubra a verdadeira arte digital e<br />
+            colecione diversas
             <span class="colored-text bold">NFTs</span>
           </h1>
         </div>
         <div>
-          <img alt="Badge with message written on border" src="/assets/badge.svg"/>
+          <img
+            alt="Badge with message written on border"
+            src="/assets/badge.svg"
+          />
         </div>
       </section>
       <article class="gallery-section">
-        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-1.png" />
-        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-2.png" />
-        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-3.png" />
-        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-4.png" />
-        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-5.png" />
-        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-6.png" />
-        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-7.png" />
-        <img alt="Astronaut photography" class="gallery-image" src="/assets/galeria-8.png" />
+        <img
+          alt="Astronaut photography"
+          class="gallery-image"
+          src="/assets/galeria-1.png"
+        />
+        <img
+          alt="Astronaut photography"
+          class="gallery-image"
+          src="/assets/galeria-2.png"
+        />
+        <img
+          alt="Astronaut photography"
+          class="gallery-image"
+          src="/assets/galeria-3.png"
+        />
+        <img
+          alt="Astronaut photography"
+          class="gallery-image"
+          src="/assets/galeria-4.png"
+        />
+        <img
+          alt="Astronaut photography"
+          class="gallery-image"
+          src="/assets/galeria-5.png"
+        />
+        <img
+          alt="Astronaut photography"
+          class="gallery-image"
+          src="/assets/galeria-6.png"
+        />
+        <img
+          alt="Astronaut photography"
+          class="gallery-image"
+          src="/assets/galeria-7.png"
+        />
+        <img
+          alt="Astronaut photography"
+          class="gallery-image"
+          src="/assets/galeria-8.png"
+        />
       </article>
     </main>
     <section class="second-background">
@@ -93,25 +138,30 @@
           </div>
         </div>
       </div>
-        <div class="testimonials-1">
-          <p class="testimonials-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
-            culpa doloribus <span class="colored-underline">similique nisi eum</span> voluptatum minima porro repudiandae
-            dolorem blanditiis asperiores minus tempore
-            </p>
-          <p class="testimonials-author">Lorem ipsum</p>
-        </div>
-        <div class="testimonials-2">
-          <p class="testimonials-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
-            culpa doloribus <span class="colored-underline">similique nisi eum</span> voluptatum minima porro repudiandae
-            dolorem blanditiis asperiores minus tempore
-            </p>
-          <p class="testimonials-author">Lorem ipsum</p>
-        </div>
+      <div class="testimonials-1">
+        <p class="testimonials-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
+          culpa doloribus
+          <span class="colored-underline">similique nisi eum</span> voluptatum
+          minima porro repudiandae dolorem blanditiis asperiores minus tempore
+        </p>
+        <p class="testimonials-author">Lorem ipsum</p>
+      </div>
+      <div class="testimonials-2">
+        <p class="testimonials-text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
+          culpa doloribus
+          <span class="colored-underline">similique nisi eum</span> voluptatum
+          minima porro repudiandae dolorem blanditiis asperiores minus tempore
+        </p>
+        <p class="testimonials-author">Lorem ipsum</p>
+      </div>
 
       <div class="banner">
-        <img alt="Man with glasses and neon background" src="assets/banner.png"/>
+        <img
+          alt="Man with glasses and neon background"
+          src="assets/banner.png"
+        />
       </div>
     </section>
     <section class="third-background">
@@ -121,67 +171,67 @@
           <div class="astronaut-container">
             <div class="astronaut-first-line">
               <h3>Astronauta 1</h3>
-              <img class="arrow" src="/assets/arrow-white.svg">
+              <img class="arrow" src="/assets/arrow-white.svg" />
             </div>
             <div class="astronaut-second-line">
               <h3>Mayk Brito</h3>
               <p>1.50 RKT</p>
             </div>
             <div class="astronaut-third-line">
-              <img alt="Astronaut photography" src="/assets/astronauta 1.png"/>
+              <img alt="Astronaut photography" src="/assets/astronauta 1.png" />
             </div>
           </div>
 
           <div class="astronaut-container astronaut-end">
             <div class="astronaut-first-line">
               <h3>Astronauta 2</h3>
-              <img class="arrow" src="/assets/arrow-white.svg">
+              <img class="arrow" src="/assets/arrow-white.svg" />
             </div>
             <div class="astronaut-second-line">
               <h3>Jakeliny Gracielly</h3>
               <p>2.0 RKT</p>
             </div>
             <div class="astronaut-third-line">
-              <img alt="Astronaut photography" src="/assets/astronauta-2.png"/>
+              <img alt="Astronaut photography" src="/assets/astronauta-2.png" />
             </div>
           </div>
 
           <div class="astronaut-container">
             <div class="astronaut-first-line">
               <h3>Astronauta 3</h3>
-              <img class="arrow" src="/assets/arrow-white.svg">
+              <img class="arrow" src="/assets/arrow-white.svg" />
             </div>
             <div class="astronaut-second-line">
               <h3>João Inácio (Biro)</h3>
               <p>3.75 RKT</p>
             </div>
             <div class="astronaut-third-line">
-              <img alt="Astronaut photography" src="/assets/astronauta-3.png"/>
+              <img alt="Astronaut photography" src="/assets/astronauta-3.png" />
             </div>
           </div>
 
           <div class="astronaut-container astronaut-end">
             <div class="astronaut-first-line">
               <h3>Astronauta 4</h3>
-              <img class="arrow" src="/assets/arrow-white.svg">
+              <img class="arrow" src="/assets/arrow-white.svg" />
             </div>
             <div class="astronaut-second-line">
               <h3>Tamires Santos</h3>
               <p>4.30 RKT</p>
             </div>
             <div class="astronaut-third-line">
-              <img alt="Astronaut photography" src="/assets/astronauta-4.png"/>
+              <img alt="Astronaut photography" src="/assets/astronauta-4.png" />
             </div>
           </div>
         </div>
       </div>
       <div class="melhores-artistas">
         <h2>Melhores <span class="colored-text bold">artistas</span></h2>
-      
+
         <div class="artists-grid">
           <div class="artist-container">
             <div class="artist-image">
-              <img alt="Artist profile picture" src="/assets/artista-1.png"/>
+              <img alt="Artist profile picture" src="/assets/artista-1.png" />
             </div>
             <div class="artist-text">
               <p>Mayk Brito</p>
@@ -191,7 +241,7 @@
 
           <div class="artist-container">
             <div class="artist-image">
-              <img alt="Artist profile picture" src="/assets/artista-2.png"/>
+              <img alt="Artist profile picture" src="/assets/artista-2.png" />
             </div>
             <div class="artist-text">
               <p>Jakeliny G.</p>
@@ -201,7 +251,7 @@
 
           <div class="artist-container">
             <div class="artist-image">
-              <img alt="Artist profile picture" src="/assets/artista-3.png"/>
+              <img alt="Artist profile picture" src="/assets/artista-3.png" />
             </div>
             <div class="artist-text">
               <p>João I. (Biro)</p>
@@ -211,7 +261,7 @@
 
           <div class="artist-container">
             <div class="artist-image">
-              <img alt="Artist profile picture" src="/assets/artista-4.png"/>
+              <img alt="Artist profile picture" src="/assets/artista-4.png" />
             </div>
             <div class="artist-text">
               <p>Tamires Santos</p>
@@ -221,7 +271,7 @@
 
           <div class="artist-container">
             <div class="artist-image">
-              <img alt="Artist profile picture" src="/assets/artista-5.png"/>
+              <img alt="Artist profile picture" src="/assets/artista-5.png" />
             </div>
             <div class="artist-text">
               <p>Ana Silva</p>
@@ -231,7 +281,7 @@
 
           <div class="artist-container">
             <div class="artist-image">
-              <img alt="Artist profile picture" src="/assets/artista-6.png"/>
+              <img alt="Artist profile picture" src="/assets/artista-6.png" />
             </div>
             <div class="artist-text">
               <p>Diego F.</p>
@@ -240,26 +290,37 @@
           </div>
         </div>
         <div class="ver-todos-os-artistas">
-          <a href="#">Ver todos os Artistas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="/assets/arrow-orange.svg" /></a>
+          <a href="#"
+            >Ver todos os Artistas&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img
+              src="/assets/arrow-orange.svg"
+          /></a>
         </div>
       </div>
-    </section> 
+    </section>
     <footer class="footer-first">
       <div class="footer-first-line">
         <div class="navigation-logo">
-          <a href="#"><p>Rocket <span class="colored-text bold">NFTs</span></p></a>
+          <a class="home" href="#"
+            ><p>Rocket <span class="colored-text bold">NFTs</span></p></a
+          >
         </div>
-        <a href="#" class="home-button"><img src="/assets/arrow-black.svg"/></a>
+        <a href="#" class="home-button home"
+          ><img src="/assets/arrow-black.svg"
+        /></a>
       </div>
     </footer>
     <footer class="footer-second">
       <div class="footer-newsletter">
         <div class="footer-newsletter-box">
-          <p>Fique por dentro de<br><span class="colored-text">todas as novidades</span></p>
+          <p>
+            Fique por dentro de<br /><span class="colored-text"
+              >todas as novidades</span
+            >
+          </p>
           <form>
-            <input type="email" placeholder="nft@rocketseat.com.br">
-            <input type="submit" value="Enviar">
-          </form> 
+            <input type="email" placeholder="nft@rocketseat.com.br" />
+            <input type="submit" value="Enviar" />
+          </form>
         </div>
       </div>
       <div class="footer-map">
@@ -289,13 +350,34 @@
     <footer class="footer-last">
       <div class="footer-last-line">
         <div>
-          <a href="https://www.rocketseat.com.br/" target="_blank">www.rocketseat.com.br</a>
+          <a href="https://www.rocketseat.com.br/" target="_blank"
+            >www.rocketseat.com.br</a
+          >
         </div>
         <div class="social-media-container">
-          <a href="https://www.instagram.com/rocketseat_oficial/" target="_blank"><img alt="Instagram icon" class="social-media" src="/assets/instagram.svg"/></a>
-          <a href="https://www.youtube.com/c/RocketSeat" target="_blank"><img alt="Youtube icon" class="social-media" src="/assets/youtube.svg"/></a>
-          <a href="https://twitter.com/rocketseat" target="_blank"><img alt="Twitter icon" class="social-media" src="/assets/twitter.svg"/></a>
-          <a href="mailto:opensource@rocketseat.com.br" target="_blank"><img alt="Email icon" class="social-media" src="/assets/email.svg"/></a>
+          <a
+            href="https://www.instagram.com/rocketseat_oficial/"
+            target="_blank"
+            ><img
+              alt="Instagram icon"
+              class="social-media"
+              src="/assets/instagram.svg"
+          /></a>
+          <a href="https://www.youtube.com/c/RocketSeat" target="_blank"
+            ><img
+              alt="Youtube icon"
+              class="social-media"
+              src="/assets/youtube.svg"
+          /></a>
+          <a href="https://twitter.com/rocketseat" target="_blank"
+            ><img
+              alt="Twitter icon"
+              class="social-media"
+              src="/assets/twitter.svg"
+          /></a>
+          <a href="mailto:opensource@rocketseat.com.br" target="_blank"
+            ><img alt="Email icon" class="social-media" src="/assets/email.svg"
+          /></a>
         </div>
       </div>
     </footer>
